# TrueGRF

./: .gitignore  .prettierrc  .rsw.json  README.md  fix-new-urls.js  package-lock.json  package.json  rsw.toml  svelte.config.js
.github/: generate-changelog-listing.sh
patches/: README.md  svelte-material-fix-slider.patch
public/: openttd.data  openttd.html  openttd.js
src/: App.tsx  CargoItem.tsx  CargoList.tsx  CategoryGeneric.tsx  CategoryIndustries.css  CategoryIndustries.tsx  ConfigDefault.tsx  DataCargoNew.tsx  DataIndustryNew.tsx  Editor.css  Editor.tsx  EditorNode.tsx  EditorSidebar.tsx  GenerateGRF.tsx  Generic.tsx  IndustryItem.css  IndustryItem.tsx  IndustryList.tsx  Sprite.css  (+2 more)
truegrf-rs/: Cargo.toml
truegrf-rs/src/: grf.rs  lib.rs  main.rs
truegrf-rs/src/grf/: mod.rs  png.rs
truegrf-rs/src/grf/actions/: action14.rs  action2.rs  action2_failed.rs  action3.rs  action8.rs  mod.rs  varaction2.rs
truegrf-rs/src/grf/actions/action0/: cargo.rs  global_settings.rs  industry.rs  industry_tile.rs  industry_tiles.rs  mod.rs
truegrf-rs/src/grf/actions/action1/: mod.rs  png.rs
truegrf-rs/src/grf/actions/action2_rpn/: README.md  engine.rs  mod.rs  stack.rs  token.rs  type.rs
truegrf-rs/src/grf/actions/action2_rpn/function/: assign.rs  call.rs  compare.rs  identifier.rs  lookup.rs  loop.rs  math.rs  mod.rs  range.rs
truegrf-rs/src/grf/actions/action2_rpn/main/: assign.rs  compare.rs  identifier.rs  lookup.rs  math.rs  mod.rs
truegrf-rs/src/grf/actions/variable/: global.rs  industry.rs  industry_cb28.rs  industry_tile.rs  mod.rs  register.rs
(+110 files in other folders)
