[package]
name = "truegrf"
version = "0.2.0"
authors = ["Patric Stout <truebrain@openttd.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "0.13"
bitflags = "1.3"
clap = "3.1"
console_error_panic_hook = { version = "0.1", optional = true }
image = { version = "0.24", default-features = false, features = ["png"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[profile.release]
opt-level = "s"
